--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -291,7 +291,39 @@ Africa & Total Score & 8.49 & 7.41 & 4.22 & 65.63 & 17.78 & 1.00\\
 
 \subsection{Índice Commerce}
 
-En la Tabla 4 se presentan las frecuencias bivariadas del indice Commerce y el índice Total Score. En esta se puede apreciar como hay una alta concentración de los datos en la parte superior izquierda de la tabla, donde se indica que 55 de los 62 datos con un Índice Commerce entre 0 y 10 presentan un Total Score menor o igual a 40.
+El indicador Commercial evalúa la capacidad de los países para convertir el conocimiento en IA en aplicaciones comerciales y soluciones de mercado. La Tabla 4 presenta la distribución global de este indicador a través de intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en cada rango. Este análisis es clave para identificar qué economías están liderando la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
+
+La Tabla 4 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
+
+\end{multicols}
+
+\begin{longtable}[]{@{}lcccc@{}}
+\caption{Frecuencia del Índice Commercial}\tabularnewline
+\toprule\noalign{}
+Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+{[}0,10{]} & 55 & 0.89 & 55 & 0.89 \\
+(10,20{]} & 4 & 0.06 & 59 & 0.95 \\
+(20,30{]} & 1 & 0.02 & 60 & 0.97 \\
+(30,40{]} & 0 & 0.00 & 60 & 0.97 \\
+(40,50{]} & 1 & 0.02 & 61 & 0.98 \\
+(50,60{]} & 0 & 0.00 & 61 & 0.98 \\
+(60,70{]} & 0 & 0.00 & 61 & 0.98 \\
+(70,80{]} & 0 & 0.00 & 61 & 0.98 \\
+(80,90{]} & 0 & 0.00 & 61 & 0.98 \\
+(90,100{]} & 1 & 0.02 & 62 & 1.00 \\
+\end{longtable}
+
+\begin{multicols}{2}
+
+En la Tabla 5 se presentan las frecuencias bivariadas del indice Commerce y el índice Total Score. En esta se puede apreciar como hay una alta concentración de los datos en la parte superior izquierda de la tabla, donde se indica que 55 de los 62 datos con un Índice Commerce entre 0 y 10 presentan un Total Score menor o igual a 40.
 
 60 de los 62 datos de los diferentes países presentan un Índice Commerce menor o igual a 30, indicando que la inversión e iniciativas comerciales de Inteligencia Artificial en el 96\% de los países estudiados es baja.
 
@@ -301,11 +333,7 @@ Hay un dato con un Índice Commerce entre 40 y 50 con un total score correspondi
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-<<<<<<< HEAD
-% Wed Apr 16 20:46:01 2025
-=======
-% Wed Apr 16 20:42:52 2025
->>>>>>> 491d84188ebb9437248195356dc298d3a269b661
+% Wed Apr 16 21:19:53 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Commerce (A) vs Total Score (B)} \\ 
   \hline
@@ -375,42 +403,13 @@ En el caso de Europe los datos se distribuyen de manera significativamente compa
 \begin{center}
 \includegraphics[width=\linewidth]{figura4.png}
 \end{center}
+Figura 4. Distribución cajas y bigoes del Índice Commerce agrupado por Región.
 
-El indicador Commercial evalúa la capacidad de los países para convertir el conocimiento en IA en aplicaciones comerciales y soluciones de mercado. La Tabla 5 presenta la distribución global de este indicador a través de intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en cada rango. Este análisis es clave para identificar qué economías están liderando la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
-
-\end{multicols}
-
-\begin{longtable}[]{@{}lcccc@{}}
-\caption{Frecuencia del Índice Commercial}\tabularnewline
-\toprule\noalign{}
-Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
-\midrule\noalign{}
-\endfirsthead
-\toprule\noalign{}
-Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-{[}0,10{]} & 55 & 0.89 & 55 & 0.89 \\
-(10,20{]} & 4 & 0.06 & 59 & 0.95 \\
-(20,30{]} & 1 & 0.02 & 60 & 0.97 \\
-(30,40{]} & 0 & 0.00 & 60 & 0.97 \\
-(40,50{]} & 1 & 0.02 & 61 & 0.98 \\
-(50,60{]} & 0 & 0.00 & 61 & 0.98 \\
-(60,70{]} & 0 & 0.00 & 61 & 0.98 \\
-(70,80{]} & 0 & 0.00 & 61 & 0.98 \\
-(80,90{]} & 0 & 0.00 & 61 & 0.98 \\
-(90,100{]} & 1 & 0.02 & 62 & 1.00 \\
-\end{longtable}
-
-\begin{multicols}{2}
 
 \subsection{Índice Research}
 
-El indicador *Research* mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 5 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
+El indicador Research mide la producción científica y capacidad investigadora en inteligencia artificial, siendo un predictor clave del desarrollo tecnológico futuro. La Tabla 6 presenta su distribución global mediante frecuencias absolutas y relativas, permitiendo identificar los patrones de concentración del conocimiento especializado. Este análisis es fundamental para comprender qué países están liderando la generación de nuevo conocimiento en IA y qué regiones requieren fortalecer sus sistemas de investigación.
 
-La Tabla 6 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
 
 \end{multicols}
 
@@ -441,6 +440,35 @@ Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 \begin{multicols}{2}
 
 Los resultados revelan una concentración extrema en la capacidad investigadora: mientras el 60\% de los países se ubica por debajo de los 30 puntos (F.Rel.Acum = 0.60), solo un selecto grupo (15\%) supera los 70 puntos. Estados Unidos (100 puntos) y China (71.42) dominan claramente los intervalos superiores. Sin embargo, destaca que varios países europeos (Reino Unido 36.5, Alemania 35.84) mantienen capacidades significativas. La presencia casi nula de países africanos y latinoamericanos por encima de los 20 puntos (F.Abs = 2) evidencia un riesgo crítico de dependencia tecnológica.
+
+\end{multicols}
+
+\renewcommand{\arraystretch}{1.3}
+\begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
+% Wed Apr 16 21:19:56 2025
+\begin{longtable}{lrrrrrrrrrrr}
+\caption{Tabla de Frecuencia Bivariada Índice Research (A) vs Total Score (B)} \\ 
+  \hline
+A   -   B & [0, 10] & (10, 20] & (20, 30] & (30, 40] & (40, 50] & (50, 60] & (60, 70] & (70, 80] & (80, 90] & (90, 100] & Total \\ 
+  \hline
+(0, 10] & 9.00 & 14.00 & 3.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 26.00 \\ 
+  (10, 20] & 0.00 & 3.00 & 8.00 & 3.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 14.00 \\ 
+  (20, 30] & 0.00 & 0.00 & 6.00 & 6.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 12.00 \\ 
+  (30, 40] & 0.00 & 0.00 & 1.00 & 5.00 & 2.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 8.00 \\ 
+  (40, 50] & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  (50, 60] & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  (60, 70] & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  (70, 80] & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 1.00 & 0.00 & 0.00 & 0.00 & 1.00 \\ 
+  (80, 90] & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\ 
+  (90, 100] & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 1.00 & 1.00 \\ 
+  Total & 9.00 & 17.00 & 18.00 & 14.00 & 2.00 & 0.00 & 1.00 & 0.00 & 0.00 & 1.00 & 62.00 \\ 
+   \hline
+\hline
+\end{longtable}
+\end{scriptsize}\renewcommand{\arraystretch}{1}
+
+\begin{multicols}{2}
+
 
 \subsection{Índice Talent}
 tabla de frecuencia bivariada (indice vs total socore)
@@ -488,7 +516,7 @@ La escasez de países en rangos intermedios (30-60 puntos) es particularmente pr
 El diagrama de torta de distribución regional proporciona el contexto geopolítico esencial para interpretar las desigualdades en los indicadores de IA (Talent-Research-Commercial), revelando que la excelencia tecnológica no se distribuye aleatoriamente, sino que se concentra en regiones con ventajas históricas de inversión en educación e innovación. Esta visualización evidencia cómo la mayor representación proporcional de ciertas zonas (como América del Norte y Asia-Pacífico) correlaciona directamente con su dominio en los intervalos superiores de los tres indicadores, mientras que regiones con menor representación proporcional (África, Latinoamérica) aparecen sistemáticamente en los rangos inferiores, configurando un mapa de dependencia tecnológica global
 
 \includegraphics[width=\linewidth]{Efrain(torta).png}
-Figura 4. Distribución porcentual por Región.
+
 
 \section{Análisis de resultados}
 El estudio realizado mediante tablas univariadas de frecuencias (absolutas, relativas y acumuladas) de los tres indicadores clave revela patrones estructurales preocupantes en el desarrollo global de la inteligencia artificial. El análisis muestra una concentración extrema de capacidades en un reducido grupo de países - principalmente Estados Unidos (con puntuaciones perfectas en Talent y Commercial), China (destacada en Research con 71.42 puntos) y algunas economías europeas -, que dominan simultáneamente los tres ámbitos. Esta triple brecha (formativa, científica y comercial), evidenciada por las frecuencias acumuladas donde el 80 por ciento de los países analizados muestra desempeños limitados (F.Rel.Acum mayor a 0.80 en intervalos menores a 30 puntos para los tres indicadores), crea un escenario crítico de dependencia tecnológica.
@@ -496,6 +524,10 @@ El estudio realizado mediante tablas univariadas de frecuencias (absolutas, rela
 El estudio revela que solo el 12\% de los países (7/58) alcanza puntuaciones altas (mayores a 70 puntos) en los tres indicadores simultáneamente, mientras que el 65\% muestra limitaciones críticas en el Índice Commerce (F.Rel.Acum=0.65 en menos de 20 puntos), porcentaje que supera en 20 puntos al de Research (45\%). Destaca especialmente la brecha en Talent, donde Estados Unidos (100 puntos) quintuplica la media global (19.3 puntos), evidenciando una concentración extrema de capital humano especializado.
 
 \section{Conclusiones}
+
+Los datos analizados revelan una realidad preocupante, y es que el avance de la inteligencia artificial no se está distribuyendo de manera equitativa en el mundo. Al examinar factores clave como la inversión (Commerce), la innovación (Research) y la formación de especialistas (Talent), queda claro que solo un puñado de países (principalmente Estados Unidos, China y algunas potencias europeas) concentran la mayor parte del progreso en este campo. Esto es preocupante por el hecho de que más del 60% de las naciones evaluadas muestran un rezago importante en los tres aspectos estudiados, con regiones como África y América Latina en una posición particularmente vulnerable. Esto no solo limita su capacidad para competir en el ámbito tecnológico, sino que las coloca en riesgo de quedar atrapadas en una relación de dependencia con los países más avanzados. Urge, por tanto, que los gobiernos implementen estrategias concretas para impulsar la investigación, atraer inversiones y, sobre todo, formar profesionales capacitados en IA.
+
+Otro hallazgo importante del estudio es que el éxito en inteligencia artificial no está ligado exclusivamente al PIB de un país. Factores como el apoyo estatal, la calidad de la infraestructura digital e incluso las leyes que regulan esta tecnología juegan un papel determinante. Para cerrar la brecha, se necesitan no solo recursos económicos, sino también voluntad política y cooperación internacional. La democratización de la IA no es un tema técnico; es un desafío social que exige acción inmediata.
 
 \section{Referencias}
 [1]   “AI Global Index,” Kaggle, Apr. 26, 2023.         https://www.kaggle.com/datasets/katerynameleshenko/ai-index
